TAG: vega_ensemblseqload-4-3-1-5
TAG: vega_ensemblseqload-4-3-1-4
TAG: vega_ensemblseqload-4-3-1-3
TAG: vega_ensemblseqload-4-3-1-2
DATE: 12/01/2009
STAFF: sc
CHANGES: Added ./bin/run_assocload, corrected input file in vega cdna config

TAG: vega_ensemblseqload-4-3-1-1
DATE: 11/30/2009
STAFF: sc
CHANGES: TR9774 initial tag
